Complete Without Responsive

--- a/css/style.css
+++ b/css/style.css
@@ -1,283 +1,414 @@
-/* ================
+    /* ================
 ======= Font ====== 
 ================*/
-
-@import url('https://fonts.googleapis.com/css2?family=Nunito&family=Oxygen&family=Poppins:wght@400;500;700&display=swap');
-
-/* ================
+    
+    @import url('https://fonts.googleapis.com/css2?family=Nunito&family=Oxygen&family=Poppins:wght@400;500;700&display=swap');
+    /* ================
 ======= Utilities ====== 
 ================*/
-
-* {
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins', sans-serif;
-}
-
-.highlight {
-    color: #E02C6D;
-}
-
-
-/* ================
+    
+    * {
+        margin: 0;
+        padding: 0;
+        font-family: 'Poppins', sans-serif;
+    }
+    
+    .highlight {
+        color: #E02C6D;
+    }
+    /* ================
 ======= Navbar ====== 
 ================*/
-
-.navbar {
-    display: flex;
-    margin-left: 120px;
-    margin-right: 120px;
-    margin-top: 50px;
-}
-
-.nav-icon {
-    font-style: normal;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 36px;
-    display: flex;
-    margin-right: 494px;
-}
-
-.nav-list>ul {
-    display: flex;
-}
-
-.nav-list>ul>li {
-    list-style-type: none;
-}
-
-.nav-list a {
-    text-decoration: none;
-    margin-right: 30px;
-    color: black;
-    font-weight: bold;
-}
-
-
-/* ================
+    
+    .navbar {
+        display: flex;
+        margin-left: 120px;
+        margin-right: 120px;
+        margin-top: 50px;
+    }
+    
+    .nav-icon {
+        font-style: normal;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 36px;
+        display: flex;
+        margin-right: 494px;
+    }
+    
+    .nav-list>ul {
+        display: flex;
+    }
+    
+    .nav-list>ul>li {
+        list-style-type: none;
+    }
+    
+    .nav-list a {
+        text-decoration: none;
+        margin-right: 30px;
+        color: black;
+        font-weight: bold;
+    }
+    /* ================
 ======= Header ====== 
 ================*/
-
-.header {
-    height: calc(100vh - 84px);
-    margin-left: 120px;
-    margin-right: 120px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.header-left {
-    margin-top: 140px;
-    margin-right: 60px;
-}
-
-.header-title {
-    font-style: normal;
-    font-weight: bold;
-    font-size: 52px;
-    line-height: 70px;
-}
-
-.header-left p {
-    margin-bottom: 16px;
-}
-
-.btn {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 10px 24px;
-    width: 196px;
-    height: 44px;
-    left: 101px;
-    top: 523px;
-    background: #E02C6D;
-    border-radius: 41px;
-    border: #E02C6D;
-    margin-right: 10px;
-    color: white;
-    align-items: center;
-    cursor: pointer;
-}
-
-.right-arrow {
-    margin-left: 20px;
-}
-
-.btn:hover {
-    transition: ;
-}
-
-.background-circle {
-    position: absolute;
-    width: 450px;
-    height: 475px;
-    left: 833px;
-    top: 181px;
-    opacity: 0.7;
-}
-
-.header-img {
-    position: absolute;
-    width: 410px;
-    height: 390px;
-    left: 835px;
-    top: 211px;
-}
-
-
-/* ================
+    
+    .header {
+        height: calc(100vh - 84px);
+        margin-left: 120px;
+        margin-right: 120px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    
+    .header-left {
+        margin-top: 140px;
+        margin-right: 60px;
+    }
+    
+    .header-title {
+        font-style: normal;
+        font-weight: bold;
+        font-size: 52px;
+        line-height: 70px;
+    }
+    
+    .header-left p {
+        margin-bottom: 16px;
+    }
+    
+    .btn {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        padding: 10px 24px;
+        width: 196px;
+        height: 44px;
+        left: 101px;
+        top: 523px;
+        background: #E02C6D;
+        border-radius: 41px;
+        border: #E02C6D;
+        margin-right: 10px;
+        color: white;
+        align-items: center;
+        cursor: pointer;
+    }
+    
+    .right-arrow {
+        margin-left: 20px;
+    }
+    
+    .btn:hover {
+        transition: ;
+    }
+    
+    .background-circle {
+        position: absolute;
+        width: 450px;
+        height: 475px;
+        left: 833px;
+        top: 181px;
+        opacity: 0.7;
+    }
+    
+    .header-img {
+        position: absolute;
+        width: 410px;
+        height: 390px;
+        left: 835px;
+        top: 211px;
+    }
+    /* ================
 ======= Icon ====== 
 ================*/
-
-.icon {
-    margin-left: 165px;
-    margin-right: 165px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 36px 62px;
-    border-top: 2px solid rgba(226, 226, 226, 0.562);
-    border-bottom: 2px solid rgba(226, 226, 226, 0.562);
-    margin-bottom: 100px;
-}
-
-.icon-list img {
-    margin-right: 35px;
-    width: 99.12px;
-    height: 39.61px;
-    left: 632.47px;
-    top: 761px;
-}
-
-
-/* ================
+    
+    .icon {
+        margin-left: 165px;
+        margin-right: 165px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 36px 62px;
+        border-top: 2px solid rgba(226, 226, 226, 0.562);
+        border-bottom: 2px solid rgba(226, 226, 226, 0.562);
+        margin-bottom: 100px;
+    }
+    
+    .icon-list img {
+        margin-right: 35px;
+        width: 99.12px;
+        height: 39.61px;
+        left: 632.47px;
+        top: 761px;
+    }
+    /* ================
+======= Icon ====== 
+================*/
+    
+    .icon {
+        margin-left: 165px;
+        margin-right: 165px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 36px 62px;
+        border-top: 2px solid rgba(226, 226, 226, 0.562);
+        border-bottom: 2px solid rgba(226, 226, 226, 0.562);
+        margin-bottom: 100px;
+    }
+    
+    .icon-list img {
+        margin-right: 35px;
+        width: 99.12px;
+        height: 39.61px;
+        left: 632.47px;
+        top: 761px;
+    }
+    /* ================
 ======= Collection ====== 
 ================*/
-
-.collection {
-    margin-right: 197px;
-    margin-left: 197px;
-    margin-bottom: 100px;
-}
-
-.collection-header {
-    margin-bottom: 30px;
-    text-align: center;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 30px;
-    line-height: 70px;
-}
-
-.popular-collection {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-row-gap: 30px;
-    grid-column-gap: 30px;
-}
-
-.card {
-    width: 329px;
-    height: 476px;
-    background: #FFFFFF;
-    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
-    border-radius: 5px;
-}
-
-.card-img {
-    width: 300px;
-    height: 256px;
-    border-radius: 5px;
-    padding: 17px 15px;
-}
-
-.card-details {
-    margin-left: 15px;
-}
-
-.img-name {
-    width: 151px;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 28px;
-    line-height: 40px;
-}
-
-.amount {
-    height: 36px;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 150%;
-    display: flex;
-    align-items: center;
-    color: rgba(0, 0, 0, 0.87);
-}
-
-.rating i {
-    color: #FB8200;
-    padding-right: 11px;
-    width: 8px;
-    height: 8px;
-}
-
-.description {
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 143%;
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.018em;
-    color: #787885;
-    padding-top: 5px;
-}
-
-
-/* ================
+    
+    .collection {
+        margin-right: 197px;
+        margin-left: 197px;
+        margin-bottom: 100px;
+    }
+    
+    .collection-header {
+        margin-bottom: 30px;
+        text-align: center;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 30px;
+        line-height: 70px;
+    }
+    
+    .popular-collection {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-row-gap: 30px;
+        grid-column-gap: 30px;
+    }
+    
+    .card {
+        width: 329px;
+        height: 476px;
+        background: #FFFFFF;
+        box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+        border-radius: 5px;
+    }
+    
+    .card-img {
+        width: 300px;
+        height: 256px;
+        border-radius: 5px;
+        padding: 17px 15px;
+    }
+    
+    .card-details {
+        margin-left: 15px;
+    }
+    
+    .img-name {
+        width: 151px;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 28px;
+        line-height: 40px;
+    }
+    
+    .amount {
+        height: 36px;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 24px;
+        line-height: 150%;
+        display: flex;
+        align-items: center;
+        color: rgba(0, 0, 0, 0.87);
+    }
+    
+    .rating i {
+        color: #FB8200;
+        padding-right: 11px;
+        width: 8px;
+        height: 8px;
+    }
+    
+    .description {
+        font-style: normal;
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 143%;
+        display: flex;
+        align-items: center;
+        letter-spacing: 0.018em;
+        color: #787885;
+        padding-top: 5px;
+    }
+    /* ================
 ======= Contact Us ====== 
 ================*/
-
-
-/* ================
+    
+    .contact {
+        text-align: center;
+        margin-bottom: 50px;
+    }
+    
+    .contactus-title {
+        font-style: normal;
+        font-size: 42px;
+        margin-bottom: 10px;
+    }
+    
+    .contact-img {
+        height: 240px;
+        width: 600px;
+    }
+    
+    .contact-form form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 40%;
+        height: 300px;
+        justify-content: center;
+        margin-left: 450px;
+    }
+    
+    .contact-btn {
+        padding: 10px 24px;
+        width: 196px;
+        height: 44px;
+        background: #E02C6D;
+        border-radius: 41px;
+        border: #E02C6D;
+        color: white;
+        align-items: center;
+        cursor: pointer;
+        margin-top: 20px;
+    }
+    
+    .text-field {
+        width: 100%;
+        margin: 10px 0;
+        padding: 10px;
+        font-size: 18px;
+        font-family: inherit;
+        outline: 0;
+        border: 1px solid #FF008E;
+    }
+    /* ================
 ======= Footer ====== 
 ================*/
-
-.footer {
-    background-color: rgb(2, 2, 56);
-    color: #FFFFFF;
-    padding: 50px 580px;
-    text-align: center;
-}
-
-.footer-header {
-    font-style: normal;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 36px;
-    color: #FFFFFF;
-    text-align: center;
-}
-
-.copyright {
-    text-align: center;
-    font-style: normal;
-    font-size: 14px;
-    line-height: 24px;
-    color: #D9DBE1;
-    letter-spacing: 1px;
-}
-
-.social-icon i {
-    padding-right: 10px;
-    text-align: center;
-    padding-top: 15px;
-    font-size: 22px;
-}
-
-
-/* ================
+    
+    .footer {
+        background-color: rgb(2, 2, 56);
+        color: #FFFFFF;
+        padding: 50px 580px;
+        text-align: center;
+    }
+    
+    .footer-header {
+        font-style: normal;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 36px;
+        color: #FFFFFF;
+        text-align: center;
+    }
+    
+    .copyright {
+        text-align: center;
+        font-style: normal;
+        font-size: 14px;
+        line-height: 24px;
+        color: #D9DBE1;
+        letter-spacing: 1px;
+    }
+    
+    .social-icon ul {
+        display: flex;
+        list-style: none;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .social-icon ul li a {
+        text-decoration: none;
+        list-style: none;
+    }
+    
+    .social-icon>ul>li>a>i {
+        text-align: center;
+        font-style: normal;
+        font-size: 24px;
+        line-height: 24px;
+        color: #D9DBE1;
+        letter-spacing: 1px;
+        text-align: center;
+        display: grid;
+        padding-right: 10px;
+        text-align: center;
+        padding-top: 15px;
+        font-size: 22px;
+    }
+    /* ================
 ======= Media Query ====== 
 ================*/
+    
+    @media only screen and (max-width: 600px) {
+        .nav-icon {
+            margin-top: 30px;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 24px;
+            align-items: center;
+            margin-bottom: 50px;
+        }
+        .nav-list>ul {
+            display: none;
+        }
+        .header {
+            height: calc(100vh - 84px);
+            display: grid;
+            grid-template-rows: 1fr, 1fr;
+        }
+        .header-left {
+            order: 1;
+        }
+        .header-right {
+            order: 2;
+            padding: 50px 0;
+        }
+        .header-title {
+            width: 300px;
+            height: 78px;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 25px;
+            text-align: center;
+            margin-left: 0px;
+        }
+        .header-left p {
+            text-align: center;
+            width: 300px;
+            height: 78px;
+            margin-bottom: 60px;
+        }
+        .btn {
+            margin-left: 64px;
+        }
+        .right-arrow {
+            margin-left: 20px;
+        }
+        .background-circle {
+            text-align: center;
+        }
+        .header-img {
+            text-align: center;
+            max-width: 350px;
+        }
+    }
